...
      }
    },
    "3M" : {
      "comment" : "A 3-month period.",
      "extractionState" : "stale",
...
      }
    },
    "All Transactions" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Appearance" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Client badges" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Client name" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Close" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Could not save project icon" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Data" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Delete" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Delete income line?" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Display conversion rate" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Drag to rotate" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Experimental" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Income" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Insights" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Outline" : {
      "comment" : "A label for a project icon style.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Primary" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Project icons" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Settings" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Status" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Sync now" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Connection" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "What's new" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Clear filters" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Current connection" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Set up a personal Supabase database" : {
      "localizations" : {
        "ru" : {
...
